Add Midtrans keys to .env.example
Updated Midtrans keys in the example environment file.

--- a/.env.example
+++ b/.env.example
@@ -27,9 +27,9 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-MIDTRANS_SERVER_KEY=
-MIDTRANS_CLIENT_KEY=
-MIDTRANS_MERCHANT_ID=
+MIDTRANS_SERVER_KEY=#Mid-server-NKgXbw5LYU7Z96yTIZUlL9p0
+MIDTRANS_CLIENT_KEY=#Mid-client-bYymohFd771MBsZZ
+MIDTRANS_MERCHANT_ID=#G700495057
 MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_IS_SANITIZED=true
 MIDTRANS_IS_3DS=true
